# LLM_TA

./: .gitignore  GroveVisionV1.py  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  STARTUP_GUIDE.md  start-backend.sh  start-frontend.sh  start-teacher-web.sh  test-api-connection.html
backend/: .env.example  dump.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/models/: __init__.py  database.py  embedding.py  error_book.py  knowledge.py  metrics.py  question.py  question_v2.py  session.py  student.py  subject.py  user.py
backend/routers/: __init__.py  asr.py  auth.py  dashboard.py  errors.py  grove_vision.py  practice.py  questions.py  sessions.py  student.py  student_metrics.py  subjects.py  teacher.py
backend/scripts/: init_db.py  migrate_error_records.py
backend/services/: __init__.py  asr_module.py  dialog_engine.py  error_book.py  fsm_controller.py  grove_vision.py  hint_controller.py  knowledge_graph.py  llm_client.py  metrics_calculator.py  prompt_builder.py  question_bank.py  rag_module.py  session_manager.py
backend/tests/: conftest.py  test_api_routes.py  test_asr_module.py  test_asr_module_properties.py  test_dialog_engine.py  test_error_book.py  test_error_book_properties.py  test_fsm_controller.py  test_fsm_controller_properties.py  test_hint_controller.py  test_hint_controller_properties.py  test_knowledge_graph_properties.py  test_llm_client.py  test_main.py  test_metrics_calculator.py  test_metrics_calculator_properties.py  test_models.py  test_prompt_builder.py  test_question_bank_properties.py  (+3 more)
(+153 files in other folders)
